--- a/style.scss
+++ b/style.scss
@@ -45,7 +45,7 @@ body {
             border-color: #0080C1;
         }
     }
-    &__button {
+    &__start__button {
         background: #7AC100;
         border-radius: 12px;
         border: none;
