--- a/style.scss
+++ b/style.scss
@@ -44,6 +44,9 @@ body {
         &__button:hover {
             border-color: #0080C1;
         }
+        &__button:focus {
+            border-color: #0080C1;
+        }
     }
     &__start__button {
         background: #7AC100;
@@ -59,6 +62,10 @@ body {
         color: #FFFFFF;
         margin-top: 67px;
         margin-bottom: 50px;
+        transition: background 1s;
+    }
+    &__start__button:hover {
+        background: #228B22;
     }
 }
 @font-face {
