--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,11 @@
+* {
+    margin: 0;
+    padding: 0;
+  }
 body {
     background-color: #004980;
+}
+.start {
     display: flex;
     justify-content: center;
 }
@@ -12,7 +18,7 @@ body {
     align-items: center;
     flex-direction: column;
     &__heading {
-        margin-top: 15px;
+        margin-top: 52px;
         width: 208px;
         text-align: center;
         &__text {
@@ -24,7 +30,7 @@ body {
         }
     }
     &__level {
-        margin-top: 5px;
+        margin-top: 48px;
         display: flex;
         gap: 24px;
         &__button {
@@ -68,6 +74,64 @@ body {
         background: #228B22;
     }
 }
+.header {
+    display: flex;
+    justify-content: space-between;
+    &__timer {
+        margin-top: 22px;
+        margin-left: 23px;
+        &__time__unit {
+            display: flex;
+            column-gap: 57px;
+            padding-left: 38px;
+            height: 17px;
+            &__text {
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 32px;
+                font-family: 'StratosSkyeng';
+                color: #FFFFFF;
+            }
+        }
+        &__time {
+            font-family: 'StratosSkyeng';
+            font-size: 64px;
+            font-weight: 400;
+            line-height: 72px;
+            color: #FFFFFF;
+        }
+    }
+    &__button__retry {
+        margin-right: 23px;
+        margin-top: 53px;
+        font-family: 'StratosSkyeng';
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 32px;
+        width: 246px;
+        height: 48px;
+        border-radius: 12px;
+        border: none;
+        background-color: #7AC100;
+        color: #FFFFFF;
+    }
+    
+}
+.level {
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(3, 120px);
+    justify-content: center;
+    margin-top: 48px;
+    &__two {
+        grid-template-columns: repeat(4, 120px);
+    }
+    &__free {
+        grid-template-columns: repeat(6, 120px);
+    }
+}
+
 @font-face {
     font-family: "StratosSkyeng"; 
     src: url(fonts/stratosskyengweb-regular.woff2); 
