--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-color: #004980;
+}
+
+.start {
   display: flex;
   justify-content: center;
 }
@@ -14,7 +22,7 @@ body {
   flex-direction: column;
 }
 .container__heading {
-  margin-top: 15px;
+  margin-top: 52px;
   width: 208px;
   text-align: center;
 }
@@ -26,7 +34,7 @@ body {
   color: #004980;
 }
 .container__level {
-  margin-top: 5px;
+  margin-top: 48px;
   display: flex;
   gap: 24px;
 }
@@ -68,6 +76,65 @@ body {
 }
 .container__start__button:hover {
   background: #228B22;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+.header__timer {
+  margin-top: 22px;
+  margin-left: 23px;
+}
+.header__timer__time__unit {
+  display: flex;
+  -moz-column-gap: 57px;
+       column-gap: 57px;
+  padding-left: 38px;
+  height: 17px;
+}
+.header__timer__time__unit__text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 32px;
+  font-family: "StratosSkyeng";
+  color: #FFFFFF;
+}
+.header__timer__time {
+  font-family: "StratosSkyeng";
+  font-size: 64px;
+  font-weight: 400;
+  line-height: 72px;
+  color: #FFFFFF;
+}
+.header__button__retry {
+  margin-right: 23px;
+  margin-top: 53px;
+  font-family: "StratosSkyeng";
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px;
+  width: 246px;
+  height: 48px;
+  border-radius: 12px;
+  border: none;
+  background-color: #7AC100;
+  color: #FFFFFF;
+}
+
+.level {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(3, 120px);
+  justify-content: center;
+  margin-top: 48px;
+}
+.level__two {
+  grid-template-columns: repeat(4, 120px);
+}
+.level__free {
+  grid-template-columns: repeat(6, 120px);
 }
 
 @font-face {
