--- a/css/style.scss
+++ b/css/style.scss
@@ -1,40 +1,47 @@
 * {
     margin: 0;
     padding: 0;
-  }
+}
+
 body {
     background-color: #004980;
 }
+
 .start {
     display: flex;
     justify-content: center;
 }
+
 .container {
-    background-color: #C2F5FF;
+    background-color: #c2f5ff;
     border-radius: 12px;
     width: 480px;
     margin-top: 158px;
     display: flex;
     align-items: center;
     flex-direction: column;
+
     &__heading {
         margin-top: 52px;
         width: 208px;
         text-align: center;
+
         &__text {
             font-weight: 400;
             font-size: 40px;
             line-height: 48px;
-            font-family: 'StratosSkyeng';
+            font-family: StratosSkyeng, sans-serif;
             color: #004980;
         }
     }
+
     &__level {
         margin-top: 48px;
         display: flex;
         gap: 24px;
+
         &__button {
-            background: #FFFFFF;
+            background: #fff;
             border-radius: 12px;
             border-color: transparent;
             width: 98px;
@@ -43,68 +50,78 @@ body {
             font-weight: 400;
             font-size: 64px;
             line-height: 72px;
-            font-family: 'StratosSkyeng';
-            color: #0080C1;
+            font-family: StratosSkyeng, sans-serif;
+            color: #0080c1;
             transition: border-color 1s;
         }
+
         &__button:hover {
-            border-color: #0080C1;
+            border-color: #0080c1;
         }
+
         &__button:focus {
-            border-color: #0080C1;
+            border-color: #0080c1;
         }
     }
+
     &__start__button {
-        background: #7AC100;
+        background: #7ac100;
         border-radius: 12px;
         border: none;
         width: 246px;
         height: 50px;
-        font-family: 'StratosSkyeng';
+        font-family: StratosSkyeng, sans-serif;
         font-style: normal;
         font-weight: 400;
         font-size: 24px;
         line-height: 32px;
-        color: #FFFFFF;
+        color: #fff;
         margin-top: 67px;
         margin-bottom: 50px;
         transition: background 1s;
     }
+
     &__start__button:hover {
-        background: #228B22;
+        background: #228b22;
     }
 }
+
 .header {
     display: flex;
     justify-content: space-between;
+
     &__timer {
         margin-top: 22px;
         margin-left: 23px;
+
         &__time__unit {
             display: flex;
             column-gap: 57px;
             padding-left: 38px;
             height: 17px;
+
             &__text {
                 font-weight: 400;
                 font-size: 16px;
                 line-height: 32px;
-                font-family: 'StratosSkyeng';
-                color: #FFFFFF;
+                font-family: StratosSkyeng, sans-serif;
+                color: #fff;
             }
         }
+
         &__time {
-            font-family: 'StratosSkyeng';
+            font-family: StratosSkyeng, sans-serif;
             font-size: 64px;
             font-weight: 400;
             line-height: 72px;
-            color: #FFFFFF;
+            color: #fff;
         }
     }
+
     &__button__retry {
         margin-right: 23px;
         margin-top: 53px;
-        font-family: 'StratosSkyeng';
+        font-family: StratosSkyeng, sans-serif;
         font-size: 24px;
         font-style: normal;
         font-weight: 400;
@@ -113,26 +130,28 @@ body {
         height: 48px;
         border-radius: 12px;
         border: none;
-        background-color: #7AC100;
-        color: #FFFFFF;
+        background-color: #7ac100;
+        color: #fff;
     }
-    
 }
+
 .level {
     display: grid;
     gap: 20px;
     grid-template-columns: repeat(3, 120px);
     justify-content: center;
     margin-top: 48px;
+
     &__two {
         grid-template-columns: repeat(4, 120px);
     }
+
     &__free {
         grid-template-columns: repeat(6, 120px);
     }
 }
 
 @font-face {
-    font-family: "StratosSkyeng"; 
-    src: url(fonts/stratosskyengweb-regular.woff2); 
+    font-family: StratosSkyeng;
+    src: url('fonts/stratosskyengweb-regular.woff2');
 }
